Fixed checkboxes in form
I also made the form paginated like the show page. Not sure if I did that in the last commit already...

--- a/plantsuwa/app/assets/stylesheets/custom.css
+++ b/plantsuwa/app/assets/stylesheets/custom.css
@@ -188,4 +188,23 @@ textarea {
 }
 
 
+.padding-mobile {
+  padding: 0 10px;
+}
 
+.help-inline {
+  color: rgb(169, 68, 66);
+}
+
+.check_boxes > .controls {
+  padding: 0 30px;
+  padding-bottom: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  height: 120px;
+  overflow-y: scroll;
+}
+.check_boxes .checkbox {
+  font-size: small;
+	font-family: 'Oxygen', sans-serif;
+}
