--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -1,227 +1,202 @@
 <% provide(:title, @current_plant.name) %>
 
-<div style="margin-top: 4px; margin-bottom: 55px;">
-    <div id="btn-photos" class="info-tab">
-      <p>Photos</p>
-    </div>
-    <div id="btn-naming" class="info-tab info-tab-current">
-      <p>Naming</p>
-    </div>
-    <div id="btn-descriptions" class="info-tab">
-      <p>Desc.</p>
-    </div>
-    <div id="btn-architectural" class="info-tab">
-      <p>Arch.</p>
-    </div>
-    <div id="btn-cultural" class="info-tab">
-      <p>Cultural</p>
-    </div>
-    <div id="btn-other" class="info-tab">
-      <p>Other</p>
-    </div>
-    <div id="btn-historical" class="info-tab">
-      <p>Hist.</p>
-    </div>
-</div>
+<%= render 'top_tabs' %>
 
+<div class="padding-mobile">
 
-
-
-<div id="tab-naming" class="info-body">
-	<h2>Naming</h2>
-	<dl class="dl-horizontal">
-		<dt>Name</dt><dd><%= @current_plant.name %></dd>
-		<% if @current_plant.genera.any? %>
-      <!-- CHANGE THIS TO ONE TO MANY !-->
-			<dt>Genus</dt><dd><%= @current_plant.genera.first.name %></dd>
-		<% end %>
-		<% if @current_plant.families.any? %>
-      <!-- CHANGE THIS TO ONE TO MANY !-->
-			<dt>Family</dt><dd><%= @current_plant.families.first.name %></dd>
-		<% end %>
-		<% if not @current_plant.species.blank? %>
-			<dt>Species</dt><dd><%= @current_plant.species %></dd>
-		<% end %>
-		<% if not @current_plant.common_name.blank? %>
-			<dt>Common Name</dt><dd><%= @current_plant.common_name %></dd>
-		<% end %>
-		<% if not @current_plant.scientific_name.blank? %>
-			<dt>Scientific Name</dt><dd><%= @current_plant.scientific_name %></dd>
-		<% end %>
-		<% if not @current_plant.synonym.blank? %>
-			<dt>Synonym</dt><dd><%= @current_plant.synonym %></dd>
-		<% end %>
-		<% if not @current_plant.subspecies.blank? %>
-			<dt>Subspecies</dt><dd><%= @current_plant.subspecies %></dd>
-		<% end %>
-		<% if @current_plant.types.any? %>
-      <!-- CHANGE THIS TO ONE TO MANY !-->
-			<dt>Types</dt>
-			<% for @type in @current_plant.types %>
-				<dd> <%= @type.name %> </dd>
-			<% end %>
-		<% end %>
-	</dl>
-</div>
-
-<div id="tab-descriptions" class="info-body" style="display: none">	
-	<h2>Descriptions</h2>
-	<dl class="dl-horizontal">
-    <% if not @current_plant.description.blank? %>
-			<dt>Description</dt><dd><%= @current_plant.description %></dd>
-		<% end %>
-		<% if not @current_plant.characteristics.blank? %>
-			<dt>Characteristics</dt><dd><%= @current_plant.characteristics %></dd>
-		<% end %>
-		<% if not @current_plant.identification.blank? %>
-			<dt>Identification</dt><dd><%= @current_plant.identification %></dd>
-		<% end %>
-		<% if not @current_plant.physical.blank? %>
-			<dt>Physical</dt><dd><%= @current_plant.physical %></dd>
-		<% end %>
-		<% if @current_plant.sizes.any? %>
-			<dt>Size</dt>
-			<% for @size in @current_plant.sizes %>
-				<dd> <%= @size.name %> </dd>
-			<% end %>
-		<% end %>
-		<% if @current_plant.flower_colours.any? %>
-			<dt>Flower Colour</dt>
-			<% for @flower_colour in @current_plant.flower_colours %>
-				<dd> <%= @flower_colour.name %> </dd>
-			<% end %>
-		<% end %>
-		<% if @current_plant.leaf_colours.any? %>
-			<dt>Leaf Colour</dt>
-			<% for @leaf_colour in @current_plant.leaf_colours %>
-				<dd> <%= @leaf_colour.name %> </dd>
-			<% end %>		
-		<% end %>
-	</dl>
-</div>
-
-
-
-<div id="tab-architectural" class="info-body" style="display: none">
-	<h2>Architechural</h2>
-	<dl class="dl-horizontal">
-
-    <% if @current_plant.climates.any? %>
-		  <dt>Climates</dt>		
-		  <% for @climate in @current_plant.climates %>
-			  <dd> <%= @climate.name %></dd>
+  <div id="tab-naming" class="info-body">
+	  <h2>Naming</h2>
+	  <dl class="dl-horizontal">
+		  <dt>Name</dt><dd><%= @current_plant.name %></dd>
+		  <% if @current_plant.genera.any? %>
+        <!-- CHANGE THIS TO ONE TO MANY !-->
+			  <dt>Genus</dt><dd><%= @current_plant.genera.first.name %></dd>
 		  <% end %>
-    <% end %>
-
-    <% if not @current_plant.environment.blank? %>
-		  <dt>Environment</dt><dd><%= @current_plant.environment %></dd>
-    <% end %>
-
-    <% if not @current_plant.horticulture.blank? %>
-		  <dt>Horticulture</dt><dd><%= @current_plant.horticulture %></dd>
-    <% end %>
-
-    <% if not @current_plant.architectural_uses.blank? %>
-		  <dt>Architectural Uses</dt><dd><%= @current_plant.architectural_uses %></dd>
-    <% end %>
-
-    <% if not @current_plant.architectural_info.blank? %>
-		  <dt>Architectural Info</dt><dd><%= @current_plant.architectural_info %></dd>
-    <% end %>
-
-    <% if @current_plant.soil_types.any? %>
-		  <dt>Soil Types</dt>		
-		  <% for @soil_type in @current_plant.soil_types %>
-			  <dd> <%= @soil_type.name %></dd>
+		  <% if @current_plant.families.any? %>
+        <!-- CHANGE THIS TO ONE TO MANY !-->
+			  <dt>Family</dt><dd><%= @current_plant.families.first.name %></dd>
 		  <% end %>
-    <% end %>
-	</dl>
-</div>
+		  <% if not @current_plant.species.blank? %>
+			  <dt>Species</dt><dd><%= @current_plant.species %></dd>
+		  <% end %>
+		  <% if not @current_plant.common_name.blank? %>
+			  <dt>Common Name</dt><dd><%= @current_plant.common_name %></dd>
+		  <% end %>
+		  <% if not @current_plant.scientific_name.blank? %>
+			  <dt>Scientific Name</dt><dd><%= @current_plant.scientific_name %></dd>
+		  <% end %>
+		  <% if not @current_plant.synonym.blank? %>
+			  <dt>Synonym</dt><dd><%= @current_plant.synonym %></dd>
+		  <% end %>
+		  <% if not @current_plant.subspecies.blank? %>
+			  <dt>Subspecies</dt><dd><%= @current_plant.subspecies %></dd>
+		  <% end %>
+		  <% if @current_plant.types.any? %>
+        <!-- CHANGE THIS TO ONE TO MANY !-->
+			  <dt>Types</dt>
+			  <% for @type in @current_plant.types %>
+				  <dd> <%= @type.name %> </dd>
+			  <% end %>
+		  <% end %>
+	  </dl>
+  </div>
+
+  <div id="tab-descriptions" class="info-body" style="display: none">	
+	  <h2>Descriptions</h2>
+	  <dl class="dl-horizontal">
+      <% if not @current_plant.description.blank? %>
+			  <dt>Description</dt><dd><%= @current_plant.description %></dd>
+		  <% end %>
+		  <% if not @current_plant.characteristics.blank? %>
+			  <dt>Characteristics</dt><dd><%= @current_plant.characteristics %></dd>
+		  <% end %>
+		  <% if not @current_plant.identification.blank? %>
+			  <dt>Identification</dt><dd><%= @current_plant.identification %></dd>
+		  <% end %>
+		  <% if not @current_plant.physical.blank? %>
+			  <dt>Physical</dt><dd><%= @current_plant.physical %></dd>
+		  <% end %>
+		  <% if @current_plant.sizes.any? %>
+			  <dt>Size</dt>
+			  <% for @size in @current_plant.sizes %>
+				  <dd> <%= @size.name %> </dd>
+			  <% end %>
+		  <% end %>
+		  <% if @current_plant.flower_colours.any? %>
+			  <dt>Flower Colour</dt>
+			  <% for @flower_colour in @current_plant.flower_colours %>
+				  <dd> <%= @flower_colour.name %> </dd>
+			  <% end %>
+		  <% end %>
+		  <% if @current_plant.leaf_colours.any? %>
+			  <dt>Leaf Colour</dt>
+			  <% for @leaf_colour in @current_plant.leaf_colours %>
+				  <dd> <%= @leaf_colour.name %> </dd>
+			  <% end %>		
+		  <% end %>
+	  </dl>
+  </div>
+
+
+
+  <div id="tab-architectural" class="info-body" style="display: none">
+	  <h2>Architechural</h2>
+	  <dl class="dl-horizontal">
+
+      <% if @current_plant.climates.any? %>
+		    <dt>Climates</dt>		
+		    <% for @climate in @current_plant.climates %>
+			    <dd> <%= @climate.name %></dd>
+		    <% end %>
+      <% end %>
+
+      <% if not @current_plant.environment.blank? %>
+		    <dt>Environment</dt><dd><%= @current_plant.environment %></dd>
+      <% end %>
+
+      <% if not @current_plant.horticulture.blank? %>
+		    <dt>Horticulture</dt><dd><%= @current_plant.horticulture %></dd>
+      <% end %>
+
+      <% if not @current_plant.architectural_uses.blank? %>
+		    <dt>Architectural Uses</dt><dd><%= @current_plant.architectural_uses %></dd>
+      <% end %>
+
+      <% if not @current_plant.architectural_info.blank? %>
+		    <dt>Architectural Info</dt><dd><%= @current_plant.architectural_info %></dd>
+      <% end %>
+
+      <% if @current_plant.soil_types.any? %>
+		    <dt>Soil Types</dt>		
+		    <% for @soil_type in @current_plant.soil_types %>
+			    <dd> <%= @soil_type.name %></dd>
+		    <% end %>
+      <% end %>
+	  </dl>
+  </div>
 	
-<div id="tab-cultural" class="info-body" style="display: none">
-	<h2>Cultural</h2>
-	<dl class="dl-horizontal">
-    <% if not @current_plant.culture.blank? %>
-		  <dt>Culture</dt><dd><%= @current_plant.culture %></dd>
-    <% end %>
+  <div id="tab-cultural" class="info-body" style="display: none">
+	  <h2>Cultural</h2>
+	  <dl class="dl-horizontal">
+      <% if not @current_plant.culture.blank? %>
+		    <dt>Culture</dt><dd><%= @current_plant.culture %></dd>
+      <% end %>
 
-    <% if not @current_plant.conservation.blank? %>
-		  <dt>Conservation</dt><dd><%= @current_plant.conservation %></dd>
-    <% end %>
+      <% if not @current_plant.conservation.blank? %>
+		    <dt>Conservation</dt><dd><%= @current_plant.conservation %></dd>
+      <% end %>
 
-    <% if not @current_plant.wildlife.blank? %>
-		  <dt>Wildlife</dt><dd><%= @current_plant.wildlife %></dd>
-    <% end %>
-	</dl>
-</div>	
+      <% if not @current_plant.wildlife.blank? %>
+		    <dt>Wildlife</dt><dd><%= @current_plant.wildlife %></dd>
+      <% end %>
+	  </dl>
+  </div>	
 
-<div id="tab-other" class="info-body" style="display: none">
-	<h2>Other</h2>
-	<dl class="dl-horizontal">
-    <% if @current_plant.origins.any? %>
-		  <dt>Origins</dt>		
-		  <% for @origin in @current_plant.origins %>
-			  <dd> <%= @origin.name %></dd>
-		  <% end %>
-    <% end %>
+  <div id="tab-other" class="info-body" style="display: none">
+	  <h2>Other</h2>
+	  <dl class="dl-horizontal">
+      <% if @current_plant.origins.any? %>
+		    <dt>Origins</dt>		
+		    <% for @origin in @current_plant.origins %>
+			    <dd> <%= @origin.name %></dd>
+		    <% end %>
+      <% end %>
 
-    <% if not @current_plant.location_name.blank? %>
-		  <dt>Location Name</dt><dd><%= @current_plant.location_name %></dd>
-    <% end %>
+      <% if not @current_plant.location_name.blank? %>
+		    <dt>Location Name</dt><dd><%= @current_plant.location_name %></dd>
+      <% end %>
 
-    <% if not @current_plant.general_info.blank? %>
-		  <dt>General Info</dt><dd><%= @current_plant.general_info %></dd>
-    <% end %>
+      <% if not @current_plant.general_info.blank? %>
+		    <dt>General Info</dt><dd><%= @current_plant.general_info %></dd>
+      <% end %>
 
-    <% if not @current_plant.additional_info.blank? %>
-		  <dt>Additional Info</dt><dd><%= @current_plant.additional_info %></dd>
-    <% end %>
-	</dl>
-</div>
+      <% if not @current_plant.additional_info.blank? %>
+		    <dt>Additional Info</dt><dd><%= @current_plant.additional_info %></dd>
+      <% end %>
+	  </dl>
+  </div>
 	
-<div id="tab-historical" class="info-body" style="display: none">
-	<h2>Historical</h2>
-	<dl class="dl-horizontal">
-    <% if not @current_plant.discovered_by.blank? %>
-		  <dt>Discovered By</dt><dd><%= @current_plant.discovered_by %></dd>
-    <% end %>
-    <% if not @current_plant.named_by.blank? %>
-		  <dt>Named By</dt><dd><%= @current_plant.named_by %></dd>
-    <% end %>
-	</dl>
-</div>
+  <div id="tab-historical" class="info-body" style="display: none">
+	  <h2>Historical</h2>
+	  <dl class="dl-horizontal">
+      <% if not @current_plant.discovered_by.blank? %>
+		    <dt>Discovered By</dt><dd><%= @current_plant.discovered_by %></dd>
+      <% end %>
+      <% if not @current_plant.named_by.blank? %>
+		    <dt>Named By</dt><dd><%= @current_plant.named_by %></dd>
+      <% end %>
+	  </dl>
+  </div>
 
-<div id="tab-photos" class="info-body" style="display: none">
-  <h2>Photos</h2>
-  <p>Nothing here yet, sorry!</p>
-</div>
+  <div id="tab-photos" class="info-body" style="display: none">
+    <h2>Photos</h2>
+    <p>Nothing here yet, sorry!</p>
+  </div>
 
-<hr/>
+  <hr/>
 
-<%= link_to edit_current_plant_path(@current_plant) do %>
-<div class="action-tab">
-  <div class="center-wrapper">
-    <div style="display: inline-block;">
-      <p><span class="glyphicon glyphicon-edit"></span>&nbsp;&nbsp;Edit plant</p>
+  <%= link_to edit_current_plant_path(@current_plant) do %>
+  <div class="action-tab">
+    <div class="center-wrapper">
+      <div style="display: inline-block;">
+        <p><span class="glyphicon glyphicon-edit"></span>&nbsp;&nbsp;Edit plant</p>
+      </div>
     </div>
   </div>
-</div>
-<% end %>
-<%= link_to new_current_plant_path do %>
-<div class="action-tab" style="left: 50%">
-  <div class="center-wrapper">
-    <div style="display: inline-block;">
-      <p><span class="glyphicon glyphicon-tree-deciduous"></span>&nbsp;&nbsp;New plant</p>
+  <% end %>
+  <%= link_to new_current_plant_path do %>
+  <div class="action-tab" style="left: 50%">
+    <div class="center-wrapper">
+      <div style="display: inline-block;">
+        <p><span class="glyphicon glyphicon-tree-deciduous"></span>&nbsp;&nbsp;New plant</p>
+      </div>
     </div>
   </div>
-</div>
-<% end %>
+  <% end %>
+
+</div> <!-- padding-mobile -->
 
 
-
-
-<%= link_to 'Back', current_plants_path, class: 'btn-primary' %>
-<%= link_to 'Edit', edit_current_plant_path(@current_plant), class: 'btn-primary' %>
 
 <%= render 'bottom_nav_plants' %>
 
