trying to get form bar working
still doesn't submit properly. not sure how to fix, but should be able to get it so the entire button at the bottom submits the form, not just the little one that says 'Done'

--- a/plantsuwa/app/views/current_plants/_bottom_nav_plants.html.erb
+++ b/plantsuwa/app/views/current_plants/_bottom_nav_plants.html.erb
@@ -30,7 +30,7 @@
   <% end %>
 
   <%= link_to current_plants_path do %>
-    <div id="middle-box" class="bottom-nav-box" style="border-left: 1px solid #242424; border-right: 1px solid gray; padding-top: 10px;">
+    <div class="bottom-nav-box" style="border-left: 1px solid #242424; border-right: 1px solid gray; padding-top: 10px;">
       <div class="center-wrapper">
         <div style="display: inline-block;">
 
