--- a/plantsuwa/app/assets/stylesheets/custom.css
+++ b/plantsuwa/app/assets/stylesheets/custom.css
@@ -120,7 +120,8 @@ textarea {
   border-right: 1px solid #ccc;
   background: #eee;
 	box-shadow: 0px 2px 8px #ccc;
-  
+
+
 }
 
 .info-tab:hover {
@@ -207,4 +208,52 @@ textarea {
 .check_boxes .checkbox {
   font-size: small;
 	font-family: 'Oxygen', sans-serif;
+}
+
+
+
+#bottom-nav-mobile {
+
+  background: black;
+
+  background: -webkit-linear-gradient(#2E2E2E, black, black, #2E2E2E); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(#2E2E2E, black, black, #2E2E2E); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(#2E2E2E, black, black, #2E2E2E); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(#2E2E2E, black, black, #2E2E2E); /* Standard syntax */
+
+	
+	width: 100%;
+	position: fixed;
+  left: 0;
+	bottom: 0;
+	height: 50px;
+	padding: 4px 0px;
+	
+	
+}
+
+.bottom-nav-box {
+	height: 100%;
+	width: 33.3%;
+	display: table-cell;
+
+  float: left;
+  padding-top: 7px;
+}
+
+.bottom-nav-box p {
+	color: white;
+	font-size: small;
+}
+
+.bottom-nav-box:active {
+	background: rgba(255, 255, 255, 0.2);
+	
+}
+
+.bottom-nav-box-content {
+  width: auto;
+  height: 100%;
+  margin-top: 4px;
+  padding: 0 3px;
 }
