added  signup/login/logout

--- a/plantsuwa/app/views/current_plants/_bottom_nav_plants_form.html.erb
+++ b/plantsuwa/app/views/current_plants/_bottom_nav_plants_form.html.erb
@@ -1,7 +1,7 @@
 <div id="bottom-nav-mobile">
 
 
-  <%= link_to current_plants_path do %>
+  <%= link_to :back do %>
     <div class="bottom-nav-box" style="width: 33.3%; border-left: 1px solid #242424; border-right: 1px solid gray; padding-top: 10px;">
       <div class="center-wrapper">
         <div style="display: inline-block;">
@@ -17,7 +17,7 @@
     <div class="center-wrapper">
       <div style="display: inline-block;">
         <div class="bottom-nav-box-content" style="float: right">
-          <%= f.submit 'Done' %>
+          <%= f.submit 'Create plant' %>
           <!--
           <p><span class="glyphicon glyphicon-ok"></span>&nbsp;&nbsp;Create plant</p>
           -->
