--- a/plantsuwa/app/views/layouts/application.html.erb
+++ b/plantsuwa/app/views/layouts/application.html.erb
@@ -32,6 +32,11 @@
   <div style="height: 45px"></div>
 
 	<%= yield %>
+  <!-- Uncomment for Debug <%= debug(params) if Rails.env.development? %> -->
+
+
+
+
 
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -40,6 +45,10 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
   <script src="js/jquery.mobile.custom.min.js"></script>	
+
+
+
+
 
 </body>
 </html>
