--- a/plantsuwa/app/views/current_plants/_form.html.erb
+++ b/plantsuwa/app/views/current_plants/_form.html.erb
@@ -90,6 +90,12 @@
 
     <div id="tab-photos" class="info-body" style="display: none">
       <h2>Photos</h2>
+
+      <%= f.simple_fields_for :photos, f.object.photos.build do |p| %>
+        <%= p.input :description %>
+      <% end %>
+
+
       <p>Nothing here yet, sorry!</p>
     </div>
 
