--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -171,7 +171,7 @@
   <div id="tab-photos" class="info-body" style="display: none">
     <h2>Photos</h2>
 	  <% for @photo in @current_plant.photos %>
-		  <dd> <%= @photo.description %> </dd>
+		  <%= image_tag @photo.image.url, style: "max-width: 600px; max-height: 600px;" %>
 	  <% end %>
   </div>
 
