--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -171,7 +171,9 @@
   <div id="tab-photos" class="info-body" style="display: none">
     <h2>Photos</h2>
 	  <% for @photo in @current_plant.photos %>
-		  <%= image_tag @photo.image.url, style: "max-width: 600px; max-height: 600px;" %>
+		  <%= image_tag @photo.image.url, style: "max-width: 100%; max-height: 400px;" %>
+      <%= @photo.description %>
+      <hr/>
 	  <% end %>
   </div>
 
@@ -197,6 +199,7 @@
   <% end %>
 
 </div> <!-- padding-mobile -->
+<div style="height: 60px"></div>
 
 
 
