--- a/plantsuwa/app/views/current_plants/_top_tabs.html.erb
+++ b/plantsuwa/app/views/current_plants/_top_tabs.html.erb
@@ -1,4 +1,4 @@
-<div style="margin-top: 4px; margin-bottom: 55px;">
+<div style="margin-bottom: 55px;">
   <div id="btn-photos" class="info-tab">
     <p>Photos</p>
   </div>
