--- a/plantsuwa/app/assets/stylesheets/custom.css
+++ b/plantsuwa/app/assets/stylesheets/custom.css
@@ -1,6 +1,16 @@
+body, .navbar {
+  min-width: 280px;
+}
+
+@media (min-width: 300px) {
+  body {
+    overflow-x: hidden;
+  }
+}
+
+
 h1, h2, h3, h4, h5, h6, th, legend {
 	font-family: 'Montserrat', sans-serif;
-	padding: 10px;
 }
 
 
@@ -159,6 +169,12 @@ textarea {
 .center-wrapper {
   display: table;
   margin: 0 auto;
+
+}
+
+.center-wrapper-inner {
+  display: inline-block;
+ 
 }
 
 
@@ -257,4 +273,62 @@ textarea {
   height: 100%;
   margin-top: 4px;
   padding: 0 3px;
+}
+
+.form-photo-box {
+  border: 1px solid #ccc;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+.btn-welcome {
+  width: 80%;
+  margin: 0 10%;
+  padding: 20px 0;
+  font-size: medium;
+	font-family: 'Montserrat', sans-serif;
+  background: #eee;
+}
+
+
+
+.plant-index-box {
+  width: 100%;
+  height: 64px;
+  border-top: 1px solid #bbb;
+  border-right: 1px solid #bbb;
+  position: relative;
+	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
+	box-sizing: border-box;         /* Opera/IE 8+ */
+}
+.plant-index-box-photo {
+  width: 64px;
+  height: 64px;
+  border-right: 1px solid #bbb;
+	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
+	box-sizing: border-box;         /* Opera/IE 8+ */
+  position: absolute;
+  left: 0;
+  top: 0;
+
+}
+.plant-index-box-content {
+  padding-top: 6px;
+  height: 64px;
+  width: 100%;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.plant-index-box-chevron {
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 64px;
+  width: 44px;
+  padding-top: 18px;
+  padding-left: 12px;
+  font-size: large;
 }
