--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -170,7 +170,7 @@
 
   <div id="tab-photos" class="info-body" style="display: none">
     <h2>Photos</h2>
-	  <% for @photo in @current_plant.photos %>
+	  <% for @photo in @current_plant.current_photos %>
 		  <%= image_tag @photo.image.url, style: "max-width: 100%; max-height: 400px;" %>
       <%= @photo.description %>
       <hr/>
