many page changes
The navbar has had a rework. Was annoying to do but it finally resizes properly with the screen. I've started adding a couple new variables for each page, 'prev_page' and 'prev_link', which hold the name of the previous page, and previous link, respectively. It basically tells the navbar what to put on the left hand side, to allow the user to navigate easier. Going to work on the bottom navigation part now.

--- a/plantsuwa/app/views/current_plants/index.html.erb
+++ b/plantsuwa/app/views/current_plants/index.html.erb
@@ -1,4 +1,14 @@
 <% provide(:title, 'List by Type') %>
+<% provide(:prev_page, 'Home') %>
+<% provide(:prev_link, root_path) %>
+
+
+<div class="plant-index-tab" style="background: #FFF8D9; position: fixed">
+  <p><strong>Climbers</strong></p>
+</div>
+
+<!-- To allow for space for the group headings -->
+<div style="height: 24px"></div>
 
 <% @current_plants.each do |plant| %>
 
