--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -1,4 +1,6 @@
 <% provide(:title, @current_plant.name) %>
+<% provide(:prev_page, 'List') %>
+<% provide(:prev_link, current_plants_path) %>
 
 <%= render 'top_tabs' %>
 
