--- a/plantsuwa/app/assets/stylesheets/custom.css
+++ b/plantsuwa/app/assets/stylesheets/custom.css
@@ -2,12 +2,6 @@ body, .navbar {
   min-width: 280px;
 }
 
-@media (min-width: 300px) {
-  body {
-    overflow-x: hidden;
-  }
-}
-
 
 h1, h2, h3, h4, h5, h6, th, legend {
 	font-family: 'Montserrat', sans-serif;
@@ -331,4 +325,47 @@ textarea {
   padding-top: 18px;
   padding-left: 12px;
   font-size: large;
+}
+
+.plant-index-tab {
+  width: 100%;
+  height: 24px;
+  padding: 4px 0;
+  z-index: 1000;
+  border-bottom: 1px solid #bbb;
+}
+
+.plant-index-tab p {
+	font-family: 'Montserrat', sans-serif;
+  font-size: small;
+} 
+
+.navbar-brand {
+  color: #bbb !important;
+}
+
+
+
+.navbar-title-block {
+  margin-bottom: 0px;
+  margin-left: -10px;
+  font-size: small;
+  width: 100%;
+}
+
+.navbar-prev-page-block {
+  margin-bottom: 0px;
+  font-size: small;
+  margin-left: -10px;
+  position: absolute;
+  left: 0;
+  width: auto;
+  padding-right: 0;
+}
+
+.navbar-uwacrest-block {
+  margin-left: -10px;
+  width: 80px;
+  position: absolute;
+  left: 0;
 }
