--- a/plantsuwa/app/views/layouts/_navbar.html.erb
+++ b/plantsuwa/app/views/layouts/_navbar.html.erb
@@ -1,45 +1,72 @@
-	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-	  <div class="container-fluid">
-		<!-- Brand and toggle get grouped for better mobile display -->
-		<div class="navbar-header">
-		  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-			<span class="sr-only">Toggle navigation</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		  </button>
-		  <a class="navbar-brand" href="http://www.uwa.edu.au" style="margin-top: -10px; margin-left: -10px; margin-right: -10px" target="_blank">			<%= image_tag 'uwacrest-small.gif', width:"30px", alt:"UWA Logo" %>
-		  <%= link_to root_path do %>
-        <p class="navbar-brand" style="margin-bottom: 0px"><%= small_title(yield(:title)) %></p>
-      <% end %>
-		  <a class="navbar-brand" style="margin-right: 5px; float: right" href="#"><span class="glyphicon glyphicon-search"></span></a>
-		</div>
-		
+
+
+
+
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+
+
+            <% if !yield(:prev_page).blank? %>
+              <%= link_to yield(:prev_link) do %>
+                <p class="navbar-brand navbar-prev-page-block"><span class="glyphicon glyphicon-chevron-left" style="color: #aaa"></span>&nbsp;&nbsp;<%= yield(:prev_page) %></p>
+              <% end %>
+            <% else %>
+              <%= link_to 'http://www.uwa.edu.au', target: '_blank' do %>
+                <div class="navbar-brand navbar-uwacrest-block">
+                      <%= image_tag 'uwacrest-small.gif', width:"30px", alt:"UWA Logo", style: 'margin-top: -10px; margin-left: 12px' %>
+                 </div>
+              <% end %>  
+            <% end %>
+
+
+              <div class="navbar-brand navbar-title-block">
+              <p style="text-align: center; color: white"><strong><%= small_title(yield(:title)) %></strong></p>
+              </div>
+
+
+
+
+      <div style="width: 100px; position: absolute; right: 0;">
+
+
+		    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-navbar-collapse">
+			    <span class="sr-only">Toggle navigation</span>
+			    <span class="icon-bar"></span>
+			    <span class="icon-bar"></span>
+			    <span class="icon-bar"></span>
+		    </button>
+
+		    <a class="navbar-brand" style="margin-right: 5px; float: right; padding-left: 5px; padding-right: 5px" href="#"><span class="glyphicon glyphicon-search"></span></a>
+
+      </div>
+
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		  <ul class="nav navbar-nav navbar-right">
+		<div class="collapse navbar-collapse" id="bs-navbar-collapse">
+		  <ul class="nav navbar-nav navbar-right" style="background: black;">
 
-			<% if signed_in? %>
-				<li><%= link_to log_out_path, method: "delete" do %>
-              Logged in as <%= current_user.username %> (Log out)
-            <% end %>
-        </li>
-      <% else %>
-        <li><%= link_to 'Sign up', sign_up_path %></li>
-      <% end %>
+			  <% if signed_in? %>
+				  <li><%= link_to log_out_path, method: "delete" do %>
+                Logged in as <%= current_user.username %> (Log out)
+              <% end %>
+          </li>
+        <% else %>
+          <li><%= link_to 'Sign up', sign_up_path %></li>
+        <% end %>
 
-			<% if not signed_in? %>
-			  <li><%= link_to 'Log in', log_in_path %></li>
-      <% end %>
+			  <% if not signed_in? %>
+			    <li><%= link_to 'Log in', log_in_path %></li>
+        <% end %>
 
-			<li><a href="#">Site Map</a></li>
-			<li><a href="#">Contact</a></li>
+			  <li><a href="#">Site Map</a></li>
+			  <li><a href="#">Contact</a></li>
 		  </ul>  
 
 		</div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
-	  
-	  
- 
-	</nav>
+
+  </div>
+  </nav>
+
+
+
+
